# langchain-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  streamlit_app.py
.agent/: README.md
.agent/sessions/: 2026-02-21_session-001.md  2026-02-21_session-002.md  2026-02-21_session-003.md  2026-02-21_session-004.md  2026-02-23_session-001.md  2026-02-23_session-002.md  2026-02-23_session-003.md  2026-02-23_session-004.md  2026-02-25_session-001_decouple-ui-pure-http-client.md  2026-03-05_session-001_chroma-http-migration.md  2026-03-05_session-002_update-readme-ingest-pipeline.md  2026-03-06_session-001_server-side-conversation-history.md  2026-03-09_session-001_mlflow-genai-evaluator.md  2026-03-15_session-001_ingest-dedup-fix.md  2026-03-15_session-002_agent-log-guidance.md  2026-03-15_session-003_add-eval-rag.md  2026-03-15_session-004_new-eval-questions.md  2026-03-16_session-001_streaming-endpoint.md  2026-03-17_session-001_eval-dataset-n-limit.md  2026-03-19_session-001_fix-evals-import-path.md  2026-03-19_session-002_return-retrieved-context-evaluator.md  2026-03-19_session-003_fix-ragas-collections-eval.md  2026-03-20_session-001_judge-client-provider-routing.md  (+1 more)
app/: api.http  api.py  config.py  evaluator.py  factory.py  graph.py  ingest.py  models.py  retriever.py  schemas.py  vectorstore.py
chromadb/: chroma_stats.py  chromadb_viewer.py
docs/: chroma_db_schema.md
evaluation/: eval_dataset.json  evaluator.py
knowledge_ingestion/: README.md
ui/: streamlit_app.py
(+28 files in other folders)
